# safe-link-project

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN_REVIEW.md  README.md  ROADMAP.md  SESSION_LOG.md  SKILL.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: module-proposal.md
.github/workflows/: ci.yml
docs/: API_INTEGRATION.md  ARCHITECTURE.md  DEPENDENCY_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  GITHUB_STRATEGY.md  LOCAL_ANALYZE_UI_RUNBOOK.md  MODULES.md  NEXTJS_UI_VALIDATION.md  PLAN_REVIEW.md  ROADMAP.md  SECURITY.md  SIMPLE_ANALYZE_UI_SPEC.md  V2_BLUEPRINT.md  V2_EPIC_ISSUE.md  V2_ROADMAP_ISSUES.md
docs/issues/: V2_E1_FOUNDATION.md  V2_E1_I4_PARITY_SNAPSHOT.md  V2_E1_I5_DOCS_SYNC.md  V2_E2_UNIFIED_ANALYZE_WORKSPACE.md  V2_E3_VERDICT_FIRST_UX.md  V2_E4_ANALYST_MODE.md  V2_E5_POLICY_PACKS.md  V2_E6_HISTORY_COMPARE_FEEDBACK.md  V2_E7_HARDENING.md  V2_E8_STABILIZATION_LAUNCH.md
src/lsh/: __init__.py
src/lsh/adapters/: api.py  (+4 more)
tests/: test_adversarial_urls.py  test_smoke.py
tests/adapters/: test_api.py
tests/application/: test_analysis_service.py  test_policy_resolver.py
tests/contracts/: test_v1_v2_snapshot_parity.py
tests/core/: test_allowlist.py  test_context.py  test_normalizer.py  test_orchestrator.py  test_policy.py  test_policy_store.py  test_scorer.py  test_url_stack.py
tests/formatters/: test_family.py  test_structured.py
tests/modules/: test_ascii_lookalike.py  test_email_auth.py  test_homoglyph.py  test_net_ip.py  test_qr_decode.py  test_redirect.py  test_url_structure.py
ui/: README.md  package-lock.json  package.json  playwright.config.ts
ui/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx
ui/e2e/: analyze.smoke.spec.ts  analyze.verdict.spec.ts
ui/lib/: api.ts
ui/scripts/: api-contract-smoke.mjs
(+50 files in other folders)
