[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "link-safety-hub"
version = "0.1.0"
description = "Modular security toolbelt for inspecting links, messages, emails, and QR codes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nick"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "requests>=2.31",
    "rich>=13.0",          # Pretty CLI output
]

[project.optional-dependencies]
# Phase 1 module dependencies (flattened — self-referential extras
# like "link-safety-hub[homoglyph]" cause issues in editable installs)
homoglyph = [
    "confusables>=1.2",
]
qr = [
    "pyzbar>=0.1.9",
    "Pillow>=10.0",
]
email-auth = [
    "dnspython>=2.4",
]
# Development: all Phase 1 deps + dev tools, listed flat
dev = [
    "confusables>=1.2",
    "pyzbar>=0.1.9",
    "Pillow>=10.0",
    "dnspython>=2.4",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
lsh = "lsh.adapters.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access (deselect with '-m not network')",
]
addopts = "-v --tb=short"
